[wip] temp disable build_memcheck just for fast checks on benchmark

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -284,8 +284,8 @@ workflows:
     jobs:
       - build:
           <<: *on-any-branch
-      - build_memcheck:
-          <<: *on-any-branch
+      # - build_memcheck:
+      #     <<: *on-any-branch
       - package_branch:
           <<: *on-master
           requires:
