--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -248,11 +248,12 @@ jobs:
           name: Run CI benchmarks on aws
           command: |
               cd ./tests/benchmarks
-              python3 remote-runner.py --terraform_bin_path /workspace/terraform \
-                                       --module_path /workspace/$MODULE_ARTIFACT \
-                                       --github_actor $CIRCLE_USERNAME \
-                                       --github_repo $CIRCLE_REPOSITORY_URL \
-                                       --github_sha $CIRCLE_SHA1
+              EC2_ACCESS_KEY=$PERF_EC2_ACCESS_KEY EC2_SECRET_KEY=$PERF_EC2_SECRET_KEY EC2_REGION=$PERF_EC2_REGION python3 remote-runner.py \
+                                      --terraform_bin_path /workspace/terraform \
+                                      --module_path /workspace/$MODULE_ARTIFACT \
+                                      --github_actor $CIRCLE_USERNAME \
+                                      --github_repo $CIRCLE_REPOSITORY_URL \
+                                      --github_sha $CIRCLE_SHA1
 
 
 
