--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -248,7 +248,7 @@ jobs:
           name: Run CI benchmarks on aws
           command: |
               cd ./tests/benchmarks
-              EC2_ACCESS_KEY=$PERF_EC2_ACCESS_KEY EC2_SECRET_KEY=$PERF_EC2_SECRET_KEY EC2_REGION=$PERF_EC2_REGION python3 remote-runner.py \
+              EC2_ACCESS_KEY=$PERFORMANCE_EC2_ACCESS_KEY EC2_SECRET_KEY=$PERFORMANCE_EC2_SECRET_KEY EC2_REGION=$PERFORMANCE_EC2_REGION python3 remote-runner.py \
                                       --terraform_bin_path /workspace/terraform \
                                       --module_path /workspace/$MODULE_ARTIFACT \
                                       --github_actor $CIRCLE_USERNAME \
