--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -251,6 +251,7 @@ jobs:
               export EC2_ACCESS_KEY=$PERFORMANCE_EC2_ACCESS_KEY
               export EC2_SECRET_KEY=$PERFORMANCE_EC2_SECRET_KEY
               export EC2_REGION=$PERFORMANCE_EC2_REGION
+              export EC2_PRIVATE_PEM=$PERFORMANCE_EC2_PRIVATE_PEM
               mkdir -p ~/.aws
               echo "[default]" >> ~/.aws/credentials
               echo "aws_access_key_id = $PERFORMANCE_EC2_ACCESS_KEY" >> ~/.aws/credentials
